# sbombom

./: .gitignore  README.md  pyproject.toml
src/sbombom/: cli.py
src/sbombom/core/: __init__.py  cyclonedx.py  models.py  repo.py  scanner.py  utils.py
src/sbombom/detectors/: __init__.py  files.py
src/sbombom/parsers/: __init__.py  dotnet.py  golang.py  java.py  javascript.py  python.py
