[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbombom"
version = "0.1.0"
description = "SBOMBOM CLI para geracao de SBOM em CycloneDX JSON"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SBOMBOM Team" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "gitpython>=3.1.0",
  "packaging>=24.0",
]

[project.scripts]
sbombom = "sbombom.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
